# collectd-4.10.1

./: Makefile.am  Makefile.in  aclocal.m4  configure  configure.in
bindings/: Makefile.in
bindings/java/: Makefile.in
contrib/: Makefile.am  cephtool.py
debian/: changelog  collectd-core.install  control  rules
libltdl/: Makefile
src/: Makefile.am  Makefile.in  ceph.c  collectd-email.5  collectd-exec.5  collectd-java.5  collectd-nagios.1  collectd-perl.5  collectd-python.5  collectd-snmp.5  collectd-unixsock.5  collectd.1  collectd.conf.5  collectdmon.1  config.h.in  types.db  types.db.5
src/libcollectdclient/: Makefile.in  lcc_features.h
src/liboconfig/: Makefile.in  parser.c
src/owniptc/: Makefile.in
